--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-index
+<html>
+    <head>
+
+    </head>
+    <body>
+        <h1>Task Dashboard</h1>
+        <button id="loadTasksBtn">Load Tasks</button>
+        <p id="statusMessage"></p>
+        <div id="taskList"></div>
+    </body>
+</html>
