--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
 
     </head>
+    <script type="module" src="main.js"></script>
     <body>
         <h1>Task Dashboard</h1>
         <button id="loadTasksBtn">Load Tasks</button>
