--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="styles.css">
+        <title>Task Manager</title>
     </head>
     <script type="module" src="main.js"></script>
     <body>
